--- a/package.json
+++ b/package.json
@@ -6,31 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-picker/picker": "2.4.0",
-    "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-header-search-bar": "^0.1.10",
-    "react-native-paper": "^4.12.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "expo": "~48.0.6",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-paper": "^5.4.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
