--- a/eas.json
+++ b/eas.json
@@ -21,7 +21,7 @@
         "resourceClass": "m1-medium"
       },
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "apk"
       }
     }
   },
